--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@ nav ul li { padding:10px 0; border-bottom:1px solid #ccc; cursor:pointer; }
 nav ul li:hover { background:#eee; }
 
 #booksContainer { max-width:1000px; margin:20px auto; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
-.bookCard { background:white; padding:15px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); width:200px; text-align:center; display:flex; flex-direction:column; align-items:center; }
+.bookCard { background:white; padding:15px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); flex:1 1 45%; max-width:200px; text-align:center; display:flex; flex-direction:column; align-items:center; }
 .bookCard img { width:150px; height:200px; object-fit:cover; border-radius:5px; }
 .bookCard h3 { margin:10px 0 5px; }
 .bookCard p { font-size:14px; margin:5px 0; }
 .bookCard a { display:inline-block; margin-top:5px; padding:5px 10px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; }
+
+@media (max-width:600px) {
+  .bookCard { flex:1 1 45%; } /* dy libra per rresht */
+}
 </style>
 </head>
 <body>
