--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
 header { background:#2b3a67; color:white; padding:10px 20px; display:flex; align-items:center; justify-content:space-between; position:relative; }
-header h1 { margin:0; font-size:24px; flex:1; text-align:center; color:white; }
+header h1 { margin:0; font-size:24px; flex:1; text-align:center; }
 #burger { font-size:24px; cursor:pointer; margin-right:10px; }
 #searchBox { padding:5px 10px; border-radius:5px; border:none; width:250px; max-width:40%; }
 
@@ -19,10 +19,9 @@ nav ul li:hover { background:#eee; }
 #booksContainer {
   max-width:1000px;
   margin:20px auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap:20px;
 }
 
 .bookCard {
@@ -31,15 +30,13 @@ nav ul li:hover { background:#eee; }
   border-radius:10px;
   box-shadow:0 2px 6px rgba(0,0,0,0.2);
   text-align:center;
-  flex: 1 1 calc(50% - 20px); /* Dy libra per rresht */
-  max-width: calc(50% - 20px);
   display:flex;
   flex-direction:column;
   align-items:center;
 }
 
 .bookCard img {
-  width:100%;
+  width:150px;
   height:200px;
   object-fit:cover;
   border-radius:5px;
@@ -47,11 +44,21 @@ nav ul li:hover { background:#eee; }
 
 .bookCard h3 { margin:10px 0 5px; }
 .bookCard p { font-size:14px; margin:5px 0; }
-.bookCard a { display:inline-block; margin-top:5px; padding:5px 10px; background:#2b3a67; color:white; border-radius:5px; text-decoration:none; }
+.bookCard a {
+  display:inline-block;
+  margin-top:5px;
+  padding:5px 10px;
+  background:#2b3a67;
+  color:white;
+  border-radius:5px;
+  text-decoration:none;
+}
 
+/* Për telefon: 2 libra per rresht */
 @media (max-width:600px) {
-  .bookCard { flex: 1 1 100%; max-width: 100%; }
-  #searchBox { width: 120px; max-width: 50%; }
+  #booksContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 </style>
 </head>
@@ -68,7 +75,7 @@ nav ul li:hover { background:#eee; }
     <li id="cPanelLink">C Panel</li>
     <li class="categoryItem" data-category="Romane">Romane</li>
     <li class="categoryItem" data-category="Letërsi Shqipe">Letërsi Shqipe</li>
-    <li class="categoryItem" data-category="Të tjera">Të tjera</li>
+    <li class="categoryItem" data-category="Te tjera">Të tjera</li>
   </ul>
 </nav>
 
@@ -119,6 +126,7 @@ async function loadBooks(category = null, searchText = "") {
   const snapshot = await getDocs(booksQuery);
   snapshot.forEach(doc => {
     const data = doc.data();
+    // Filtrimi sipas kërkimit
     if(searchText && !(
       data.title.toLowerCase().includes(searchText.toLowerCase()) || 
       data.author.toLowerCase().includes(searchText.toLowerCase())
