--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ nav ul li:hover { background:#eee; }
   display:flex;
   flex-direction:column;
   align-items:center;
-  cursor:pointer;
 }
 
 .bookCard img {
@@ -55,31 +54,11 @@ nav ul li:hover { background:#eee; }
   text-decoration:none;
 }
 
-/* Modal per detajet e librit */
-#bookModal {
-  display:none;
-  position:fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.7);
-  justify-content:center;
-  align-items:center;
-  z-index:100;
-}
-#bookModalContent {
-  background:white;
-  padding:20px;
-  border-radius:10px;
-  max-width:400px;
-  width:90%;
-  max-height:90%;
-  overflow-y:auto;
-}
-#bookModalContent img { width:100%; height:auto; border-radius:5px; }
-#closeModal { cursor:pointer; float:right; font-size:18px; font-weight:bold; }
-
+/* Për telefon: 2 libra për rresht */
 @media (max-width:600px) {
-  #booksContainer { grid-template-columns: repeat(2, 1fr); }
+  #booksContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 </style>
 </head>
@@ -93,6 +72,7 @@ nav ul li:hover { background:#eee; }
 
 <nav id="navMenu">
   <ul>
+    <li id="homeLink">Kreu</li>
     <li id="cPanelLink">C Panel</li>
     <li class="categoryItem" data-category="Romane">Romane</li>
     <li class="categoryItem" data-category="Letërsi Shqipe">Letërsi Shqipe</li>
@@ -101,14 +81,6 @@ nav ul li:hover { background:#eee; }
 </nav>
 
 <div id="booksContainer"></div>
-
-<!-- Modal per detajet e librit -->
-<div id="bookModal">
-  <div id="bookModalContent">
-    <span id="closeModal">✖</span>
-    <div id="modalContent"></div>
-  </div>
-</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -134,23 +106,31 @@ const burger = document.getElementById("burger");
 const cPanelLink = document.getElementById("cPanelLink");
 const categoryItems = document.querySelectorAll(".categoryItem");
 const searchBox = document.getElementById("searchBox");
+const homeLink = document.getElementById("homeLink");
 
-// Modal
-const bookModal = document.getElementById("bookModal");
-const modalContent = document.getElementById("modalContent");
-const closeModal = document.getElementById("closeModal");
+// Ruaj historinë për funksionin “Back”
+let currentView = "home";
+let lastCategory = null;
 
-// Burger toggle
+// Burger menu toggle
 burger.addEventListener("click", () => {
   navMenu.style.display = navMenu.style.display === "block" ? "none" : "block";
 });
 
-// C Panel
+// Shko në C Panel
 cPanelLink.addEventListener("click", () => {
+  currentView = "panel";
   window.location.href = "panel.html";
 });
 
-// Ngarko librat
+// Shko në faqen kryesore
+homeLink.addEventListener("click", () => {
+  loadBooks();
+  currentView = "home";
+  navMenu.style.display = "none";
+});
+
+// Ngarko librat nga Firestore
 async function loadBooks(category = null, searchText = "") {
   booksContainer.innerHTML = "";
   let booksQuery = collection(db, "books");
@@ -160,6 +140,7 @@ async function loadBooks(category = null, searchText = "") {
   const snapshot = await getDocs(booksQuery);
   snapshot.forEach(doc => {
     const data = doc.data();
+    // Filtrimi sipas kërkimit
     if(searchText && !(
       data.title.toLowerCase().includes(searchText.toLowerCase()) || 
       data.author.toLowerCase().includes(searchText.toLowerCase())
@@ -172,40 +153,13 @@ async function loadBooks(category = null, searchText = "") {
       <h3>${data.title}</h3>
       <p><strong>Autor:</strong> ${data.author}</p>
       <p><strong>Viti:</strong> ${data.year}</p>
+      <p>${data.description}</p>
+      <a href="${data.pdfUrl}" target="_blank">Shkarko PDF</a>
     `;
-    div.addEventListener("click", () => showBookModal(data));
     booksContainer.appendChild(div);
   });
-}
-
-// Modal funksion
-function showBookModal(bookData) {
-  modalContent.innerHTML = `
-    <h2>${bookData.title}</h2>
-    <p><strong>Autor:</strong> ${bookData.author}</p>
-    <p><strong>Viti:</strong> ${bookData.year}</p>
-    <img src="${bookData.imageUrl}" alt="${bookData.title}">
-    <p>${bookData.description}</p>
-    <a href="${bookData.pdfUrl}" target="_blank">Shkarko PDF</a>
-  `;
-  bookModal.style.display = "flex";
-  history.pushState({modal:true}, "book", "#book"); // shto state në historik
-}
-
-closeModal.addEventListener("click", closeBookModal);
-
-// Back button i telefonit
-window.addEventListener("popstate", (e) => {
-  if(bookModal.style.display === "flex") {
-    closeBookModal();
-  }
-});
-
-function closeBookModal() {
-  bookModal.style.display = "none";
-  if(history.state && history.state.modal) {
-    history.back(); // heq state-in e modal
-  }
+  lastCategory = category;
+  currentView = category ? "category" : "home";
 }
 
 // Filtrimi sipas kategorive
@@ -213,16 +167,32 @@ categoryItems.forEach(item => {
   item.addEventListener("click", () => {
     const selectedCategory = item.dataset.category;
     loadBooks(selectedCategory, searchBox.value);
-    navMenu.style.display = "none";
+    navMenu.style.display = "none"; 
   });
 });
 
 // Filtrimi sipas kërkimit
 searchBox.addEventListener("input", () => {
-  loadBooks(null, searchBox.value);
+  loadBooks(lastCategory, searchBox.value);
 });
 
-// Ngarko librat fillimisht
+// Funksioni për butonin “Back” në telefon
+window.addEventListener("popstate", (e) => {
+  if (currentView === "category" || currentView === "panel") {
+    loadBooks();
+    currentView = "home";
+    e.preventDefault();
+    history.pushState({}, "");
+  } else {
+    // nëse është në faqen kryesore -> del nga aplikacioni
+    window.close();
+  }
+});
+
+// Shto një histori fillestare që “back” të mos dalë menjëherë
+history.pushState({}, "");
+
+// Ngarko të gjithë librat në fillim
 loadBooks();
 </script>
 
