--- a/index.html
+++ b/index.html
@@ -5,29 +5,41 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Biblioteka Online</title>
 <style>
-body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
-header { 
-  background:#2b3a67; 
-  color:white; 
-  padding:20px; 
-  text-align:center; 
+body {
+  font-family: Arial;
+  margin:0;
+  padding:0;
+  background:#f5f5f5;
+}
+
+header {
+  background:#2b3a67;
+  color:white;
+  padding:20px 10px;
+  text-align:center;
   position:relative;
 }
-header h1 { margin:0; font-size:28px; }
+
+header h1 {
+  margin:0;
+  font-size:28px;
+}
+
 #burger {
-  position:absolute; 
-  left:15px; 
-  top:20px; 
-  font-size:28px; 
+  position:absolute;
+  left:15px;
+  top:22px;
+  font-size:26px;
   cursor:pointer;
 }
+
 #searchBox {
   margin-top:10px;
-  padding:8px 10px; 
-  border-radius:8px; 
-  border:none; 
+  padding:8px 10px;
+  border-radius:5px;
+  border:none;
   width:80%;
-  max-width:350px;
+  max-width:400px;
 }
 
 nav {
@@ -35,47 +47,51 @@ nav {
   background:white;
   padding:10px;
   position:absolute;
-  top:75px;
-  left:0;
+  top:70px;
+  left:10px;
   width:220px;
   box-shadow:0 2px 6px rgba(0,0,0,0.2);
   z-index:10;
-  border-radius:5px;
+  border-radius:10px;
 }
-nav ul { list-style:none; padding:0; margin:0; }
+
+nav ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+
 nav ul li {
-  padding:10px 0;
+  padding:12px 10px;
   border-bottom:1px solid #ccc;
   cursor:pointer;
-  text-align:center;
+  font-weight:500;
 }
-nav ul li:hover { background:#eee; }
+
+nav ul li:hover {
+  background:#f0f0f0;
+}
 
 #booksContainer {
   max-width:1000px;
-  margin:20px auto;
+  margin:25px auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap:20px;
-  padding:10px;
+  padding:0 10px;
 }
 
 .bookCard {
   background:white;
   padding:15px;
   border-radius:10px;
-  border:2px solid #2b3a67;
-  box-shadow:0 2px 6px rgba(0,0,0,0.15);
+  box-shadow:0 2px 6px rgba(0,0,0,0.2);
   text-align:center;
   display:flex;
   flex-direction:column;
   align-items:center;
   cursor:pointer;
-  transition:transform 0.2s, box-shadow 0.2s;
-}
-.bookCard:hover {
-  transform:scale(1.03);
-  box-shadow:0 4px 10px rgba(0,0,0,0.25);
+  border:2px solid #2b3a67;
 }
 
 .bookCard img {
@@ -84,29 +100,40 @@ nav ul li:hover { background:#eee; }
   object-fit:cover;
   border-radius:5px;
 }
-.bookCard h3 { margin:10px 0 5px; }
-.bookCard p { font-size:14px; margin:5px 0; }
+
+.bookCard h3 {
+  margin:10px 0 5px;
+}
+
+.bookCard p {
+  font-size:14px;
+  margin:5px 0;
+}
+
 .bookCard a {
   display:inline-block;
   margin-top:5px;
-  padding:6px 12px;
+  padding:5px 10px;
   background:#2b3a67;
   color:white;
   border-radius:5px;
   text-decoration:none;
 }
 
-/* Modal per detajet e librit */
+/* Modal */
 #bookModal {
   display:none;
   position:fixed;
-  top:0; left:0;
-  width:100%; height:100%;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
   background: rgba(0,0,0,0.7);
   justify-content:center;
   align-items:center;
   z-index:100;
 }
+
 #bookModalContent {
   background:white;
   padding:20px;
@@ -115,13 +142,28 @@ nav ul li:hover { background:#eee; }
   width:90%;
   max-height:90%;
   overflow-y:auto;
+  box-shadow:0 2px 10px rgba(0,0,0,0.3);
+  border:2px solid #2b3a67;
 }
-#bookModalContent img { width:100%; height:auto; border-radius:5px; }
-#closeModal { cursor:pointer; float:right; font-size:18px; font-weight:bold; }
 
-/* Për telefon: 2 libra për rresht */
+#bookModalContent img {
+  width:100%;
+  height:auto;
+  border-radius:5px;
+}
+
+#closeModal {
+  cursor:pointer;
+  float:right;
+  font-size:18px;
+  font-weight:bold;
+  color:#2b3a67;
+}
+
 @media (max-width:600px) {
-  #booksContainer { grid-template-columns: repeat(2, 1fr); }
+  #booksContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 </style>
 </head>
@@ -135,17 +177,17 @@ nav ul li:hover { background:#eee; }
 
 <nav id="navMenu">
   <ul>
-    <li id="cPanelLink">C Panel</li>
     <li class="categoryItem" data-category="Të gjitha">Të gjitha</li>
+    <li id="cPanelLink">C Panel</li>
     <li class="categoryItem" data-category="Romane">Romane</li>
     <li class="categoryItem" data-category="Letërsi Shqipe">Letërsi Shqipe</li>
-    <li class="categoryItem" data-category="Të tjera">Të tjera</li>
+    <li class="categoryItem" data-category="Te tjera">Të tjera</li>
   </ul>
 </nav>
 
 <div id="booksContainer"></div>
 
-<!-- Modal per detajet e librit -->
+<!-- Modal për detajet e librit -->
 <div id="bookModal">
   <div id="bookModalContent">
     <span id="closeModal">✖</span>
@@ -185,13 +227,9 @@ const closeModal = document.getElementById("closeModal");
 
 // Burger toggle me X
 burger.addEventListener("click", () => {
-  if (navMenu.style.display === "block") {
-    navMenu.style.display = "none";
-    burger.innerHTML = "&#9776;"; // burger icon
-  } else {
-    navMenu.style.display = "block";
-    burger.innerHTML = "&times;"; // X icon
-  }
+  const open = navMenu.style.display === "block";
+  navMenu.style.display = open ? "none" : "block";
+  burger.innerHTML = open ? "&#9776;" : "✖";
 });
 
 // C Panel
@@ -204,8 +242,9 @@ async function loadBooks(category = null, searchText = "") {
   booksContainer.innerHTML = "";
   let booksQuery = collection(db, "books");
   if (category && category !== "Të gjitha") {
-    booksQuery = query(collection(db, "books"), where("category", "==", category));
+    booksQuery = query(collection(db, "books"), where("category","==",category));
   }
+
   const snapshot = await getDocs(booksQuery);
   snapshot.forEach(doc => {
     const data = doc.data();
@@ -243,14 +282,17 @@ function showBookModal(bookData) {
 
 closeModal.addEventListener("click", closeBookModal);
 
-// Back button
 window.addEventListener("popstate", (e) => {
-  if (bookModal.style.display === "flex") closeBookModal();
+  if (bookModal.style.display === "flex") {
+    closeBookModal();
+  }
 });
 
 function closeBookModal() {
   bookModal.style.display = "none";
-  if (history.state && history.state.modal) history.back();
+  if (history.state && history.state.modal) {
+    history.back();
+  }
 }
 
 // Filtrimi sipas kategorive
@@ -264,7 +306,9 @@ categoryItems.forEach(item => {
 });
 
 // Filtrimi sipas kërkimit
-searchBox.addEventListener("input", () => loadBooks(null, searchBox.value));
+searchBox.addEventListener("input", () => {
+  loadBooks(null, searchBox.value);
+});
 
 // Ngarko librat fillimisht
 loadBooks();
