--- a/panel.html
+++ b/panel.html
@@ -5,54 +5,99 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Biblioteka Online</title>
 <style>
-body { font-family: Arial; margin:0; padding:0; background:#f5f5f5; }
-header { background:#2b3a67; color:white; padding:10px 20px; display:flex; align-items:center; justify-content:space-between; position:relative; }
-header h1 { margin:0; font-size:24px; flex:1; text-align:center; }
-#burger { font-size:24px; cursor:pointer; margin-right:10px; }
-#searchBox { padding:5px 10px; border-radius:5px; border:none; width:250px; max-width:40%; }
+body {
+  font-family: Arial;
+  margin:0; padding:0;
+  background:#f5f5f5;
+}
+header {
+  background:#2b3a67;
+  color:white;
+  padding:20px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  position:relative;
+}
+header h1 {
+  margin:0;
+  font-size:26px;
+  flex:1;
+  text-align:center;
+}
+#burger {
+  font-size:26px;
+  cursor:pointer;
+  margin-right:10px;
+  transition:0.3s;
+}
+#burger.active { transform: rotate(90deg); }
 
-nav { display:none; background:white; padding:10px; position:absolute; top:50px; left:0; width:220px; box-shadow:0 2px 6px rgba(0,0,0,0.2); z-index:10; border-radius:5px; }
+#searchBox {
+  padding:8px 12px;
+  border-radius:8px;
+  border:none;
+  width:250px;
+  max-width:40%;
+}
+
+nav {
+  display:none;
+  background:white;
+  padding:10px;
+  position:absolute;
+  top:70px;
+  left:0;
+  width:220px;
+  box-shadow:0 2px 6px rgba(0,0,0,0.2);
+  z-index:10;
+  border-radius:10px;
+}
 nav ul { list-style:none; padding:0; margin:0; }
-nav ul li { padding:10px 0; border-bottom:1px solid #ccc; cursor:pointer; }
+nav ul li {
+  padding:10px 0;
+  border-bottom:1px solid #ccc;
+  cursor:pointer;
+  text-align:center;
+}
 nav ul li:hover { background:#eee; }
 
 #booksContainer {
   max-width:1000px;
   margin:20px auto;
-  display: grid;
+  display:grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap:20px;
 }
-
 .bookCard {
   background:white;
   padding:15px;
   border-radius:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.2);
+  border:2px solid #2b3a67;
   text-align:center;
   display:flex;
   flex-direction:column;
   align-items:center;
   cursor:pointer;
+  transition: transform 0.2s;
 }
-
+.bookCard:hover { transform:scale(1.02); }
 .bookCard img {
   width:150px;
   height:200px;
   object-fit:cover;
   border-radius:5px;
 }
-
 .bookCard h3 { margin:10px 0 5px; }
 .bookCard p { font-size:14px; margin:5px 0; }
 
-/* Modal per detajet e librit */
+/* Modalet */
 #bookModal, #cPanelModal {
   display:none;
   position:fixed;
   top:0; left:0;
   width:100%; height:100%;
-  background: rgba(0,0,0,0.7);
+  background:rgba(0,0,0,0.7);
   justify-content:center;
   align-items:center;
   z-index:100;
@@ -61,21 +106,38 @@ nav ul li:hover { background:#eee; }
   background:white;
   padding:20px;
   border-radius:10px;
-  max-width:400px;
+  max-width:450px;
   width:90%;
   max-height:90%;
   overflow-y:auto;
+  border:2px solid #2b3a67;
 }
-#bookModalContent img { width:100%; height:auto; border-radius:5px; }
-#closeBookModal, #closeCPanel { cursor:pointer; float:right; font-size:18px; font-weight:bold; }
+#bookModalContent img { width:100%; border-radius:5px; }
+#closeBookModal, #closeCPanel {
+  cursor:pointer;
+  float:right;
+  font-size:20px;
+  font-weight:bold;
+}
 
-.container { max-width:500px; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
-h2 { text-align:center; }
-input, textarea, select, button { display:block; width:100%; margin:10px 0; padding:10px; border-radius:5px; border:1px solid #ccc; }
-button { background:#2b3a67; color:white; border:none; cursor:pointer; font-weight:bold; }
+/* Forma e C Panelit */
+input, textarea, select, button {
+  display:block;
+  width:100%;
+  margin:10px 0;
+  padding:10px;
+  border-radius:5px;
+  border:1px solid #ccc;
+}
+button {
+  background:#2b3a67;
+  color:white;
+  border:none;
+  cursor:pointer;
+  font-weight:bold;
+}
 .message { text-align:center; color:red; font-weight:bold; }
 
-/* Për telefon: 2 libra per rresht */
 @media (max-width:600px) {
   #booksContainer { grid-template-columns: repeat(2, 1fr); }
 }
@@ -92,15 +154,16 @@ button { background:#2b3a67; color:white; border:none; cursor:pointer; font-weig
 <nav id="navMenu">
   <ul>
     <li id="cPanelLink">C Panel</li>
+    <li class="categoryItem" data-category="Të gjitha">Të gjitha</li>
     <li class="categoryItem" data-category="Romane">Romane</li>
     <li class="categoryItem" data-category="Letërsi Shqipe">Letërsi Shqipe</li>
-    <li class="categoryItem" data-category="Te tjera">Të tjera</li>
+    <li class="categoryItem" data-category="Të tjera">Të tjera</li>
   </ul>
 </nav>
 
 <div id="booksContainer"></div>
 
-<!-- Modal per detajet e librit -->
+<!-- Modal Libri -->
 <div id="bookModal">
   <div id="bookModalContent">
     <span id="closeBookModal">✖</span>
@@ -108,11 +171,11 @@ button { background:#2b3a67; color:white; border:none; cursor:pointer; font-weig
   </div>
 </div>
 
-<!-- Modal per C Panel -->
+<!-- Modal C Panel -->
 <div id="cPanelModal">
   <div id="cPanelContent">
     <span id="closeCPanel">✖</span>
-    <!-- LOGIN ADMIN -->
+
     <div id="loginContainer">
       <h2>Login Admin</h2>
       <input type="email" id="email" placeholder="Email">
@@ -121,22 +184,19 @@ button { background:#2b3a67; color:white; border:none; cursor:pointer; font-weig
       <p class="message" id="loginMessage"></p>
     </div>
 
-    <!-- PANEL -->
     <div id="panelContainer" style="display:none;">
       <h2>Shto kategori të re</h2>
       <input type="text" id="categoryName" placeholder="Emri i kategorisë">
       <button id="addCategoryBtn">Shto Kategori</button>
       <p class="message" id="categoryMsg"></p>
-
       <hr>
-
       <h2>Shto libër të ri</h2>
-      <input type="text" id="bookTitle" placeholder="Titulli i librit">
+      <input type="text" id="bookTitle" placeholder="Titulli">
       <input type="text" id="bookAuthor" placeholder="Autori">
-      <input type="text" id="bookYear" placeholder="Viti i botimit">
-      <textarea id="bookDescription" placeholder="Përshkrimi i librit"></textarea>
-      <input type="text" id="bookImageUrl" placeholder="Link i fotografisë nga Drive">
-      <input type="text" id="bookPdfUrl" placeholder="Link PDF nga Drive">
+      <input type="text" id="bookYear" placeholder="Viti">
+      <textarea id="bookDescription" placeholder="Përshkrimi"></textarea>
+      <input type="text" id="bookImageUrl" placeholder="Link i fotos (Drive)">
+      <input type="text" id="bookPdfUrl" placeholder="Link PDF (Drive)">
       <select id="bookCategory"></select>
       <button id="uploadBookBtn">Shto Librin</button>
       <button id="logoutBtn">Dil</button>
@@ -160,15 +220,13 @@ const firebaseConfig = {
   appId: "1:1056004303783:web:335725cdfeefc690702482",
   measurementId: "G-QHEGWD5J2B"
 };
-
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const auth = getAuth(app);
 
-// Elements
 const booksContainer = document.getElementById("booksContainer");
-const navMenu = document.getElementById("navMenu");
 const burger = document.getElementById("burger");
+const navMenu = document.getElementById("navMenu");
 const cPanelLink = document.getElementById("cPanelLink");
 const categoryItems = document.querySelectorAll(".categoryItem");
 const searchBox = document.getElementById("searchBox");
@@ -182,49 +240,44 @@ const closeCPanel = document.getElementById("closeCPanel");
 
 const loginContainer = document.getElementById("loginContainer");
 const panelContainer = document.getElementById("panelContainer");
-const loginBtn = document.getElementById("loginBtn");
-const logoutBtn = document.getElementById("logoutBtn");
-const loginMessage = document.getElementById("loginMessage");
 const bookCategory = document.getElementById("bookCategory");
 
-// Burger toggle
+// --- BURGER MENU ---
 burger.addEventListener("click", () => {
-  navMenu.style.display = navMenu.style.display === "block" ? "none" : "block";
+  const open = navMenu.style.display === "block";
+  navMenu.style.display = open ? "none" : "block";
+  burger.innerHTML = open ? "&#9776;" : "&#10005;";
 });
 
-// C Panel modal
+// --- C PANEL MODAL ---
 cPanelLink.addEventListener("click", () => {
   cPanelModal.style.display = "flex";
+  navMenu.style.display = "none";
+  burger.innerHTML = "&#9776;";
 });
 
-// Close modals
-closeBookModal.addEventListener("click", () => {
-  bookModal.style.display = "none";
-  if(history.state && history.state.modal) history.back();
-});
-closeCPanel.addEventListener("click", () => {
-  cPanelModal.style.display = "none";
-});
+// --- CLOSE MODALS ---
+closeBookModal.addEventListener("click", () => bookModal.style.display = "none");
+closeCPanel.addEventListener("click", () => cPanelModal.style.display = "none");
 
-// LOGIN ADMIN
-loginBtn.addEventListener("click", async () => {
+// --- LOGIN ADMIN ---
+import { loginBtn, logoutBtn } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+document.getElementById("loginBtn").addEventListener("click", async () => {
   const email = document.getElementById("email").value;
   const password = document.getElementById("password").value;
-  loginMessage.textContent = "Po kyç…";
+  const msg = document.getElementById("loginMessage");
+  msg.textContent = "Po kyç...";
   try {
     await signInWithEmailAndPassword(auth, email, password);
-    loginMessage.textContent = "";
-  } catch (err) {
-    loginMessage.textContent = "Email ose fjalëkalim gabim!";
+    msg.textContent = "";
+  } catch {
+    msg.textContent = "Email ose fjalëkalim gabim!";
   }
 });
-
-// LOGOUT
-logoutBtn.addEventListener("click", async () => {
+document.getElementById("logoutBtn").addEventListener("click", async () => {
   await signOut(auth);
 });
 
-// Kontrollo nëse admin është kyçur
 onAuthStateChanged(auth, (user) => {
   if (user) {
     loginContainer.style.display = "none";
@@ -236,7 +289,7 @@ onAuthStateChanged(auth, (user) => {
   }
 });
 
-// Shto kategori
+// --- KATEGORITË ---
 document.getElementById("addCategoryBtn").addEventListener("click", async () => {
   const name = document.getElementById("categoryName").value;
   const msg = document.getElementById("categoryMsg");
@@ -248,8 +301,6 @@ document.getElementById("addCategoryBtn").addEventListener("click", async () => 
     loadCategories();
   } catch (err) { msg.textContent = err.message; }
 });
-
-// Ngarko kategoritë
 async function loadCategories() {
   bookCategory.innerHTML = "";
   const snapshot = await getDocs(collection(db, "categories"));
@@ -261,7 +312,7 @@ async function loadCategories() {
   });
 }
 
-// Shto libër
+// --- SHTO LIBËR ---
 document.getElementById("uploadBookBtn").addEventListener("click", async () => {
   const title = document.getElementById("bookTitle").value;
   const author = document.getElementById("bookAuthor").value;
@@ -270,91 +321,68 @@ document.getElementById("uploadBookBtn").addEventListener("click", async () => {
   const category = bookCategory.value;
   const imageUrl = document.getElementById("bookImageUrl").value;
   const pdfUrl = document.getElementById("bookPdfUrl").value;
-  const uploadMessage = document.getElementById("uploadMessage");
+  const msg = document.getElementById("uploadMessage");
 
-  if (!pdfUrl) { uploadMessage.textContent = "Vendos link PDF!"; return; }
-  if (!imageUrl) { uploadMessage.textContent = "Vendos link të fotografisë!"; return; }
+  if (!pdfUrl || !imageUrl) { msg.textContent = "Vendos link PDF dhe Foto!"; return; }
 
   try {
     await addDoc(collection(db, "books"), {
       title, author, year, description, category, pdfUrl, imageUrl, createdAt: new Date()
     });
-
-    uploadMessage.textContent = "✅ Libri u shtua!";
-    document.getElementById("bookTitle").value = "";
-    document.getElementById("bookAuthor").value = "";
-    document.getElementById("bookYear").value = "";
-    document.getElementById("bookDescription").value = "";
-    document.getElementById("bookImageUrl").value = "";
-    document.getElementById("bookPdfUrl").value = "";
-  } catch (err) { uploadMessage.textContent = err.message; }
+    msg.textContent = "✅ Libri u shtua!";
+  } catch (err) { msg.textContent = err.message; }
 });
 
-// Ngarko librat
+// --- NGARKO LIBRAT ---
 async function loadBooks(category = null, searchText = "") {
   booksContainer.innerHTML = "";
-  let booksQuery = collection(db, "books");
-  if(category) {
-    booksQuery = query(collection(db, "books"), where("category","==",category));
+  let q = collection(db, "books");
+  if(category && category !== "Të gjitha") {
+    q = query(q, where("category","==",category));
   }
-  const snapshot = await getDocs(booksQuery);
+  const snapshot = await getDocs(q);
   snapshot.forEach(doc => {
-    const data = doc.data();
-    if(searchText && !(
-      data.title.toLowerCase().includes(searchText.toLowerCase()) || 
-      data.author.toLowerCase().includes(searchText.toLowerCase())
-    )) return;
-
+    const d = doc.data();
+    if(searchText && !(d.title.toLowerCase().includes(searchText.toLowerCase()) || d.author.toLowerCase().includes(searchText.toLowerCase()))) return;
     const div = document.createElement("div");
     div.className = "bookCard";
     div.innerHTML = `
-      <img src="${data.imageUrl}" alt="${data.title}">
-      <h3>${data.title}</h3>
-      <p><strong>Autor:</strong> ${data.author}</p>
-      <p><strong>Viti:</strong> ${data.year}</p>
+      <img src="${d.imageUrl}" alt="${d.title}">
+      <h3>${d.title}</h3>
+      <p><strong>Autor:</strong> ${d.author}</p>
+      <p><strong>Viti:</strong> ${d.year}</p>
     `;
-    div.addEventListener("click", () => showBookModal(data));
+    div.addEventListener("click", () => showBookModal(d));
     booksContainer.appendChild(div);
   });
 }
 
-// Modal libri
-function showBookModal(bookData) {
+// --- MODAL LIBRI ---
+function showBookModal(b) {
   modalContent.innerHTML = `
-    <h2>${bookData.title}</h2>
-    <p><strong>Autor:</strong> ${bookData.author}</p>
-    <p><strong>Viti:</strong> ${bookData.year}</p>
-    <img src="${bookData.imageUrl}" alt="${bookData.title}">
-    <p>${bookData.description}</p>
-    <a href="${bookData.pdfUrl}" target="_blank">Shkarko PDF</a>
+    <h2>${b.title}</h2>
+    <p><strong>Autor:</strong> ${b.author}</p>
+    <p><strong>Viti:</strong> ${b.year}</p>
+    <img src="${b.imageUrl}" alt="${b.title}">
+    <p>${b.description}</p>
+    <a href="${b.pdfUrl}" target="_blank">📖 Shkarko PDF</a>
   `;
   bookModal.style.display = "flex";
-  history.pushState({modal:true}, "book", "#book");
 }
 
-// Back button i telefonit
-window.addEventListener("popstate", (e) => {
-  if(bookModal.style.display === "flex") bookModal.style.display = "none";
-  if(cPanelModal.style.display === "flex") cPanelModal.style.display = "none";
-});
-
-// Filtrimi sipas kategorive
+// --- FILTRAT ---
 categoryItems.forEach(item => {
   item.addEventListener("click", () => {
-    const selectedCategory = item.dataset.category;
-    loadBooks(selectedCategory, searchBox.value);
+    const cat = item.dataset.category;
+    loadBooks(cat, searchBox.value);
     navMenu.style.display = "none";
+    burger.innerHTML = "&#9776;";
   });
 });
+searchBox.addEventListener("input", () => loadBooks(null, searchBox.value));
 
-// Filtrimi sipas kërkimit
-searchBox.addEventListener("input", () => {
-  loadBooks(null, searchBox.value);
-});
-
-// Ngarko librat fillimisht
+// --- START ---
 loadBooks();
-
 </script>
 </body>
 </html>
